...
    self.statusLabel = [UILabel new];
    self.statusLabel.text = NSLocalizedString(@"Point the camera at a QR code", nil);
    self.statusLabel.font = [UIFont preferredFontForTextStyle:UIFontTextStyleBody];
    self.statusLabel.adjustsFontForContentSizeCategory = YES;
    self.statusLabel.numberOfLines = 0;
    self.statusLabel.textAlignment = NSTextAlignmentCenter;
    self.statusLabel.accessibilityIdentifier = @"scan.status";
    self.resultLabel = [UILabel new];
    self.resultLabel.font = [UIFont preferredFontForTextStyle:UIFontTextStyleBody];
    self.resultLabel.adjustsFontForContentSizeCategory = YES;
    self.resultLabel.numberOfLines = 0;
    self.resultLabel.lineBreakMode = NSLineBreakByCharWrapping;
    self.resultLabel.accessibilityIdentifier = @"scan.result";
    self.resultLabel.hidden = YES;
    self.settingsButton = [self button:@"Open Settings" identifier:@"scan.settings" action:@selector(openSettings)];
    self.openButton = [self button:@"Open Website" identifier:@"scan.open" action:@selector(openWebsite)];
    self.resultCopyButton = [self button:@"Copy Result" identifier:@"scan.copy" action:@selector(copyResult)];
    self.importButton = [self button:@"Import Image" identifier:@"scan.import" action:NULL];
    __weak typeof(self) weakSelf = self;
    self.importButton.menu = [UIMenu menuWithChildren:@[
        [UIAction actionWithTitle:NSLocalizedString(@"Photo Library", nil) image:[UIImage systemImageNamed:@"photo"] identifier:nil handler:^(UIAction *action) { [weakSelf choosePhoto]; }],
        [UIAction actionWithTitle:NSLocalizedString(@"Choose File", nil) image:[UIImage systemImageNamed:@"folder"] identifier:nil handler:^(UIAction *action) { [weakSelf chooseFile]; }]
    ]];
    self.importButton.showsMenuAsPrimaryAction = YES;
    self.shareButton = [self button:@"Share QR Image" identifier:@"scan.share" action:@selector(shareResult)];
    self.shareButton.hidden = YES;
    self.againButton = [self button:@"Scan Again" identifier:@"scan.again" action:@selector(scanAgain)];
    self.settingsButton.hidden = self.openButton.hidden = self.againButton.hidden = self.resultCopyButton.hidden = YES;
    UIStackView *stack = [[UIStackView alloc] initWithArrangedSubviews:@[self.preview, self.statusLabel, self.resultLabel, self.settingsButton, self.openButton, self.resultCopyButton, self.shareButton, self.againButton, self.importButton]];
    stack.axis = UILayoutConstraintAxisVertical;
    stack.spacing = 16;
...
