...
@property (nonatomic, strong) UILabel *emptyLabel;
@property (nonatomic, strong) NSFetchedResultsController *fetchedResultsController;
@end
@implementation QRURLViewController
- (void)loadView {
    self.tableView = [[UITableView alloc] initWithFrame:CGRectZero style:UITableViewStylePlain];
    self.tableView.accessibilityIdentifier = @"history.table";
    self.tableView.rowHeight = UITableViewAutomaticDimension;
    self.tableView.estimatedRowHeight = 70;
    self.tableView.dataSource = self; self.tableView.delegate = self;
    [self.tableView registerClass:UITableViewCell.class forCellReuseIdentifier:@"urlCell"];
    self.tableView.tableFooterView = [UIView new];
    self.emptyLabel = [UILabel new];
...
